--- a/assets/css/components.css
+++ b/assets/css/components.css
@@ -1,31 +1,79 @@
-/* .block {
-  width: 200px;
-  height: 200px;
+.box {
+  width: 300px;
+  height: 300px;
+  background-color: rgb(200, 224, 60);
+}
+
+.box-1 {
+  /* box-sizing: content-box; */
+
+  width: 300px;
+  height: 300px;
+  background-color: rgb(188, 189, 182);
+  /* top right bottom left */
+  /* padding: 40px 25px 25px 10px; */
+  /* padding: 25px 15px 25px 15px; */
+  /* padding: 25px 15px; */
+  padding-top: 15px;
+  padding-left: 35px;
+  padding-right: 10px;
+  /* border: 10px solid rgb(200, 10, 50);
+  border: 10px dashed #2f9b27; */
+  border-width: 30px;
+  border-style: solid;
+  border-color: #00f;
+  margin-left: 50px;
+  /* border: 15px solid #00f; */
+  /* margin: 50px; */
+  /* margin: 20px 10px 20px 10px; */
+  /* margin: 20px 10px; */
+ /* margin-top: 100px;
+ margin-left: 100px;
+ margin-bottom: 120px; */
+}
+
+.box-2 {
+
+  width: 300px;
+  height: 300px;
+  background-color: #123;
+  /* padding-left: 50px;
+  padding-top: 40px;
+  padding-right: 30px */
   padding: 20px;
-  border: 10px solid #f88;
-  margin: 30px
-} */
+  border-width: 20px;
+  border-color: #0f0;
+  border-style: solid;
+  border: 20px solid #0f0;
+  margin: 40px 100px 30px 120px;
+}
+
+nav {
+  margin-left: 10px;
+}
+
+h1 {
+  background-color: #00f;
+  color: #fff;
+  width: 300px;
+  height: 100px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 20px 50px 70px 10px;
+}
 
 a {
-  /* display: inline; */
-  background-color: #47c7c7;
-}
-
-main {
-  background-color: #456;
-  height: 75%;
-  width: 75%;
-}
-
-.container {
-  /* display: block; */
-  width: 50%;
-  height: 50%;
-  background-color: #765757;
-}
-
-.block {
-  width: 50%;
+  display: inline;
+  background-color: rgb(176, 20, 20);
+  color: #fff;
+  width: 500px;
   height: 100px;
-  background-color: #f33;
+  margin-top: 50px;
+  margin-bottom: 200px;
+  margin-right: 50px;
+  margin-left: 50px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 100px;
+  padding-bottom: 200px
 }
